// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup Snapshots Default 1`] = `
.emotion-0 {
  text-align: initial;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  text-align: initial;
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="column"
    id="test-RadioGroup"
    role="radiogroup"
    width="auto"
  >
    
    <div
      class="emotion-2 emotion-3"
      direction="column"
    />
  </div>
</div>
`;

exports[`RadioGroup Snapshots Direction row 1`] = `
.emotion-0 {
  text-align: initial;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  text-align: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding-right: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 16px;
  margin-right: 10px;
}

.emotion-4 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-4 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-4:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-4 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-4 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-6 {
  position: absolute;
  height: 0;
  width: 0;
  opacity: 0;
}

body.user-is-tabbing .emotion-6:focus~div .radio-btn-indicator {
  outline: none!important;
  --outline-offset-box-shadow-color: white;
  --outline-box-shadow-color: #0D71C8;
  box-shadow: 0 0 0 2pt var(--outline-offset-box-shadow-color),0 0 0.75pt 3.5pt var(--outline-box-shadow-color);
  border: 1px solid #545F67!important;
}

.emotion-8 {
  display: block;
  border-radius: 100%;
  width: 16px;
  height: 16px;
  border: 1px solid #0D71C8;
  background-color: #FFFFFF;
  opacity: inherit;
  border: 1px solid #545F67;
}

.emotion-8:hover {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

.emotion-10 {
  font-size: 14px;
  line-height: 16px;
  margin-left: 6px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 1;
  text-overflow: ellipsis;
  font-size: 14px;
  margin-left: 8px;
  white-space: unset;
  -webkit-flex-basis: fit-content;
  -ms-flex-preferred-size: fit-content;
  flex-basis: fit-content;
  margin-left: 6px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="row"
    id="test-RadioGroup"
    role="radiogroup"
    width="auto"
  >
    
    <div
      class="emotion-2 emotion-3"
      direction="row"
    >
      <label
        aria-checked="true"
        aria-labelledby="testtest0-lbl"
        class="emotion-4 emotion-5"
        direction="row"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="true"
          aria-labelledby="testtest0-lbl"
          checked=""
          class="emotion-6 emotion-7"
          id="testtest0"
          name="test-test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="row"
          id="testtest0-lbl"
        >
          one
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest1-lbl"
        class="emotion-4 emotion-5"
        direction="row"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest1-lbl"
          class="emotion-6 emotion-7"
          id="testtest1"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="row"
          id="testtest1-lbl"
        >
          two
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest2-lbl"
        class="emotion-4 emotion-5"
        direction="row"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest2-lbl"
          class="emotion-6 emotion-7"
          id="testtest2"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="three"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="row"
          id="testtest2-lbl"
        >
          three
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup Snapshots Direction row 2`] = `undefined`;

exports[`RadioGroup Snapshots Fixed width 1`] = `
.emotion-0 {
  text-align: initial;
  width: 40pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  text-align: initial;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 16px;
}

.emotion-4 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-4 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-4:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-4 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-4 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-6 {
  position: absolute;
  height: 0;
  width: 0;
  opacity: 0;
}

body.user-is-tabbing .emotion-6:focus~div .radio-btn-indicator {
  outline: none!important;
  --outline-offset-box-shadow-color: white;
  --outline-box-shadow-color: #0D71C8;
  box-shadow: 0 0 0 2pt var(--outline-offset-box-shadow-color),0 0 0.75pt 3.5pt var(--outline-box-shadow-color);
  border: 1px solid #545F67!important;
}

.emotion-8 {
  display: block;
  border-radius: 100%;
  width: 16px;
  height: 16px;
  border: 1px solid #0D71C8;
  background-color: #FFFFFF;
  opacity: inherit;
  border: 1px solid #545F67;
}

.emotion-8:hover {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

.emotion-10 {
  font-size: 14px;
  line-height: 16px;
  margin-left: 6px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 1;
  text-overflow: ellipsis;
  font-size: 14px;
  margin-left: 8px;
  white-space: unset;
  -webkit-flex-basis: fit-content;
  -ms-flex-preferred-size: fit-content;
  flex-basis: fit-content;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 0px;
}

.emotion-20 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-20 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-20:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-20 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-20 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-20 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="column"
    id="test-RadioGroup"
    role="radiogroup"
    width="40px"
  >
    
    <div
      class="emotion-2 emotion-3"
      direction="column"
    >
      <label
        aria-checked="true"
        aria-labelledby="testtest0-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="true"
          aria-labelledby="testtest0-lbl"
          checked=""
          class="emotion-6 emotion-7"
          id="testtest0"
          name="test-test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest0-lbl"
        >
          one
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest1-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest1-lbl"
          class="emotion-6 emotion-7"
          id="testtest1"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest1-lbl"
        >
          two
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest2-lbl"
        class="emotion-20 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest2-lbl"
          class="emotion-6 emotion-7"
          id="testtest2"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="three"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest2-lbl"
        >
          three
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup Snapshots Fixed width 2`] = `undefined`;

exports[`RadioGroup Snapshots Right Align 1`] = `
.emotion-0 {
  text-align: initial;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  text-align: initial;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 16px;
}

.emotion-4 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-4 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-4:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-4 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-4 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-6 {
  position: absolute;
  height: 0;
  width: 0;
  opacity: 0;
}

body.user-is-tabbing .emotion-6:focus~div .radio-btn-indicator {
  outline: none!important;
  --outline-offset-box-shadow-color: white;
  --outline-box-shadow-color: #0D71C8;
  box-shadow: 0 0 0 2pt var(--outline-offset-box-shadow-color),0 0 0.75pt 3.5pt var(--outline-box-shadow-color);
  border: 1px solid #545F67!important;
}

.emotion-8 {
  display: block;
  border-radius: 100%;
  width: 16px;
  height: 16px;
  border: 1px solid #0D71C8;
  background-color: #FFFFFF;
  opacity: inherit;
  border: 1px solid #545F67;
}

.emotion-8:hover {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

.emotion-10 {
  font-size: 14px;
  line-height: 16px;
  margin-left: 6px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 1;
  text-overflow: ellipsis;
  font-size: 14px;
  margin-left: 8px;
  white-space: unset;
  -webkit-flex-basis: fit-content;
  -ms-flex-preferred-size: fit-content;
  flex-basis: fit-content;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 0px;
}

.emotion-20 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-20 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-20:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-20 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-20 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-20 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="column"
    id="test-RadioGroup"
    role="radiogroup"
    width="auto"
  >
    
    <div
      class="emotion-2 emotion-3"
      direction="column"
    >
      <label
        aria-checked="true"
        aria-labelledby="testtest0-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="true"
          aria-labelledby="testtest0-lbl"
          checked=""
          class="emotion-6 emotion-7"
          id="testtest0"
          name="test-test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest0-lbl"
        >
          one
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest1-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest1-lbl"
          class="emotion-6 emotion-7"
          id="testtest1"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest1-lbl"
        >
          two
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest2-lbl"
        class="emotion-20 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest2-lbl"
          class="emotion-6 emotion-7"
          id="testtest2"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="three"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest2-lbl"
        >
          three
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup Snapshots Right Align 2`] = `undefined`;

exports[`RadioGroup Snapshots Three options 1`] = `
.emotion-0 {
  text-align: initial;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 15px;
}

.emotion-2 {
  text-align: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 15px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 10px;
}

.emotion-4 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-4 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-4:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-4 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: inherit;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-4 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-6 {
  position: absolute;
  height: 0;
  width: 0;
  opacity: 0;
}

body.user-is-tabbing .emotion-6:focus~div .radio-btn-indicator {
  outline: none!important;
  --outline-offset-box-shadow-color: white;
  --outline-box-shadow-color: #0D71C8;
  box-shadow: 0 0 0 2pt var(--outline-offset-box-shadow-color),0 0 0.75pt 3.5pt var(--outline-box-shadow-color);
  border: 1px solid #0D71C8!important;
}

.emotion-8 {
  display: block;
  border-radius: 100%;
  width: 16px;
  height: 16px;
  border: 1px solid #0D71C8;
  background-color: #FFFFFF;
  opacity: inherit;
}

.emotion-8:hover {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: inherit;
}

.emotion-10 {
  font-size: 14px;
  line-height: 16px;
  margin-left: 6px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 1;
  text-overflow: ellipsis;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 0px;
}

.emotion-20 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-20 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-20:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-20 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: inherit;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-20 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-20 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="column"
    id="test-RadioGroup"
    role="radiogroup"
    width="auto"
  >
    <div
      class="emotion-2 emotion-3"
      direction="column"
    >
      <label
        aria-checked="true"
        aria-labelledby="testtest0-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="true"
          aria-labelledby="testtest0-lbl"
          checked=""
          class="emotion-6 emotion-7"
          id="testtest0"
          name="test-test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest0-lbl"
        >
          one
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest1-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest1-lbl"
          class="emotion-6 emotion-7"
          id="testtest1"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest1-lbl"
        >
          two
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest2-lbl"
        class="emotion-20 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest2-lbl"
          class="emotion-6 emotion-7"
          id="testtest2"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="three"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest2-lbl"
        >
          three
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup Snapshots Three options isV4Design 1`] = `
.emotion-0 {
  text-align: initial;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  text-align: initial;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 16px;
}

.emotion-4 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-4 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-4:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-4 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-4 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-6 {
  position: absolute;
  height: 0;
  width: 0;
  opacity: 0;
}

body.user-is-tabbing .emotion-6:focus~div .radio-btn-indicator {
  outline: none!important;
  --outline-offset-box-shadow-color: white;
  --outline-box-shadow-color: #0D71C8;
  box-shadow: 0 0 0 2pt var(--outline-offset-box-shadow-color),0 0 0.75pt 3.5pt var(--outline-box-shadow-color);
  border: 1px solid #545F67!important;
}

.emotion-8 {
  display: block;
  border-radius: 100%;
  width: 16px;
  height: 16px;
  border: 1px solid #0D71C8;
  background-color: #FFFFFF;
  opacity: inherit;
  border: 1px solid #545F67;
}

.emotion-8:hover {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

.emotion-10 {
  font-size: 14px;
  line-height: 16px;
  margin-left: 6px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 1;
  text-overflow: ellipsis;
  font-size: 14px;
  margin-left: 8px;
  white-space: unset;
  -webkit-flex-basis: fit-content;
  -ms-flex-preferred-size: fit-content;
  flex-basis: fit-content;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 0px;
}

.emotion-20 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-20 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-20:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-20 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-20 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-20 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="column"
    id="test-RadioGroup"
    role="radiogroup"
    width="auto"
  >
    
    <div
      class="emotion-2 emotion-3"
      direction="column"
    >
      <label
        aria-checked="true"
        aria-labelledby="testtest0-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="true"
          aria-labelledby="testtest0-lbl"
          checked=""
          class="emotion-6 emotion-7"
          id="testtest0"
          name="test-test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest0-lbl"
        >
          one
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest1-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest1-lbl"
          class="emotion-6 emotion-7"
          id="testtest1"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest1-lbl"
        >
          two
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest2-lbl"
        class="emotion-20 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest2-lbl"
          class="emotion-6 emotion-7"
          id="testtest2"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="three"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest2-lbl"
        >
          three
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup Snapshots Three options isV4Design 2`] = `undefined`;

exports[`RadioGroup Snapshots With minWidth 1`] = `
.emotion-0 {
  text-align: initial;
  width: auto;
  min-width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  text-align: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding-right: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 16px;
  margin-right: 10px;
}

.emotion-4 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-4 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-4:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-4 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-4 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-6 {
  position: absolute;
  height: 0;
  width: 0;
  opacity: 0;
}

body.user-is-tabbing .emotion-6:focus~div .radio-btn-indicator {
  outline: none!important;
  --outline-offset-box-shadow-color: white;
  --outline-box-shadow-color: #0D71C8;
  box-shadow: 0 0 0 2pt var(--outline-offset-box-shadow-color),0 0 0.75pt 3.5pt var(--outline-box-shadow-color);
  border: 1px solid #545F67!important;
}

.emotion-8 {
  display: block;
  border-radius: 100%;
  width: 16px;
  height: 16px;
  border: 1px solid #0D71C8;
  background-color: #FFFFFF;
  opacity: inherit;
  border: 1px solid #545F67;
}

.emotion-8:hover {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

.emotion-10 {
  font-size: 14px;
  line-height: 16px;
  margin-left: 6px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 1;
  text-overflow: ellipsis;
  font-size: 14px;
  margin-left: 8px;
  white-space: unset;
  -webkit-flex-basis: fit-content;
  -ms-flex-preferred-size: fit-content;
  flex-basis: fit-content;
  margin-left: 6px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="row"
    id="test-RadioGroup"
    role="radiogroup"
    width="auto"
  >
    
    <div
      class="emotion-2 emotion-3"
      direction="row"
    >
      <label
        aria-checked="true"
        aria-labelledby="testtest0-lbl"
        class="emotion-4 emotion-5"
        direction="row"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="true"
          aria-labelledby="testtest0-lbl"
          checked=""
          class="emotion-6 emotion-7"
          id="testtest0"
          name="test-test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="row"
          id="testtest0-lbl"
        >
          one
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest1-lbl"
        class="emotion-4 emotion-5"
        direction="row"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest1-lbl"
          class="emotion-6 emotion-7"
          id="testtest1"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="row"
          id="testtest1-lbl"
        >
          two
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest2-lbl"
        class="emotion-4 emotion-5"
        direction="row"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest2-lbl"
          class="emotion-6 emotion-7"
          id="testtest2"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="three"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="row"
          id="testtest2-lbl"
        >
          three
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup Snapshots With subtext 1`] = `
.emotion-0 {
  text-align: initial;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  text-align: initial;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 0px;
}

.emotion-4 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-4 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-4:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-4 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-4 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-4 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-6 {
  position: absolute;
  height: 0;
  width: 0;
  opacity: 0;
}

body.user-is-tabbing .emotion-6:focus~div .radio-btn-indicator {
  outline: none!important;
  --outline-offset-box-shadow-color: white;
  --outline-box-shadow-color: #0D71C8;
  box-shadow: 0 0 0 2pt var(--outline-offset-box-shadow-color),0 0 0.75pt 3.5pt var(--outline-box-shadow-color);
  border: 1px solid #545F67!important;
}

.emotion-8 {
  display: block;
  border-radius: 100%;
  width: 16px;
  height: 16px;
  border: 1px solid #0D71C8;
  background-color: #FFFFFF;
  opacity: inherit;
  border: 1px solid #545F67;
}

.emotion-8:hover {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

.emotion-10 {
  font-size: 14px;
  line-height: 16px;
  margin-left: 6px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 1;
  text-overflow: ellipsis;
  font-size: 14px;
  margin-left: 8px;
  white-space: unset;
  -webkit-flex-basis: fit-content;
  -ms-flex-preferred-size: fit-content;
  flex-basis: fit-content;
}

.emotion-12 {
  margin-top: 2px;
  line-height: 20px;
  margin-bottom: 16px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  margin-bottom: 16px;
}

.emotion-14 input:checked~div .radio-btn-indicator {
  background-color: #0D71C8;
  border-color: #0D71C8;
  box-shadow: 0 0 0 #FFFFFF;
}

.emotion-14 input:checked~div .radio-btn-indicator::after {
  position: absolute!important;
  content: '';
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 4px;
  height: 4px;
  background-color: #FFFFFF!important;
  border-radius: 100%;
}

.emotion-14:hover input~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
}

.emotion-14 input:focus~div .radio-btn-indicator {
  box-shadow: 0 0 0 1px #0D71C8;
  border-color: #E5F7FF;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-14 input:checked~div .radio-btn-indicator {
    background-color: #FFFFFF;
    border-color: #FFFFFF;
    box-shadow: 0 0 0 #FFFFFF;
  }

  .emotion-14 input:focus~div .radio-btn-indicator {
    box-shadow: 0 0 0 1px #FFFFFF;
    border-color: #FFFFFF;
  }
}

.emotion-30 {
  margin-top: 2px;
  line-height: 20px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    direction="column"
    id="test-RadioGroup"
    role="radiogroup"
    width="auto"
  >
    
    <div
      class="emotion-2 emotion-3"
      direction="column"
    >
      <label
        aria-checked="false"
        aria-labelledby="testtest0-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest0-lbl"
          class="emotion-6 emotion-7"
          id="testtest0"
          name="test-test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest0-lbl"
        >
          one
        </span>
      </label>
      <div
        class="emotion-12 emotion-13"
      >
        subtext
      </div>
      <label
        aria-checked="false"
        aria-labelledby="testtest1-lbl"
        class="emotion-14 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest1-lbl"
          class="emotion-6 emotion-7"
          id="testtest1"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest1-lbl"
        >
          two
        </span>
      </label>
      <label
        aria-checked="false"
        aria-labelledby="testtest2-lbl"
        class="emotion-4 emotion-5"
        direction="column"
        tabindex="-1"
        width="inherit"
      >
        <input
          aria-checked="false"
          aria-labelledby="testtest2-lbl"
          class="emotion-6 emotion-7"
          id="testtest2"
          name="test-test"
          tabindex="-1"
          type="radio"
          value="three"
        />
        <div
          class="radio-btn-indicator-container"
          style="position: relative;"
        >
          <div
            class="radio-btn-indicator emotion-8 emotion-9"
          />
        </div>
        <span
          class="emotion-10 emotion-11"
          direction="column"
          id="testtest2-lbl"
        >
          three
        </span>
      </label>
      <div
        class="emotion-30 emotion-13"
      >
        subtext end
      </div>
    </div>
  </div>
</div>
`;